# ScreenCapture

./: CMakeLists.txt  README.md  test.md
include/header/: showHandler.h
include/src/: showHandler.cpp
src/: ScreenCapture.cpp
